--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,7 @@ SA360_OAUTH_REDIRECT_URI=
 SA360_OAUTH_STATE_SECRET=
 # Feature flags
 ADS_FETCH_ENABLED=false
+SA360_PLAN_BYPASS_CACHE=true
 # Licensing guardrails
 LICENSE_SERVER_URL=https://license.kelvinale.com
 LICENSE_INSTANCE_ID=
