--- a/services/api/Dockerfile
+++ b/services/api/Dockerfile
@@ -2,6 +2,11 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
+# Ensure TLS validation works for outbound HTTPS (SERP checks, external APIs).
+RUN apt-get update \
+  && apt-get install -y --no-install-recommends ca-certificates \
+  && rm -rf /var/lib/apt/lists/*
+
 # Install dependencies
 COPY services/api/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
