--- a/infra/docker/Dockerfile.api
+++ b/infra/docker/Dockerfile.api
@@ -2,6 +2,11 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
+# Needed for outbound HTTPS (SERP/URL health checks, OAuth, etc.).
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends ca-certificates \
+    && rm -rf /var/lib/apt/lists/*
+
 # Install dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
